# ai-commerce-intelligence-platform

./: .env.example  .gitignore  README.md  SETUP.md  docker-compose.yml  next.config.js  package-lock.json
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/agents/: advertising_planner.py  base_agent.py  market_profiler.py  product_analyst.py  sales_strategy_agent.py  supply_chain_advisor.py
backend/app/api/: dependencies.py
backend/app/api/v1/: admin.py  auth.py  forecasts.py  products.py  subscriptions.py
backend/app/core/: config.py  forecast_engine.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  agent_log.py  api_key.py  base.py  city.py  deep_report.py  forecast.py  payment.py  product.py  subscription.py  user.py
backend/app/orchestrator/: coordinator.py
backend/app/schemas/: __init__.py  forecast_schemas.py  product_schemas.py  subscription_schemas.py  user_schemas.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx
frontend/src/app/(dashboard)/dashboard/: page.tsx
frontend/src/app/(dashboard)/forecast/: page.tsx
frontend/src/app/(dashboard)/products/: page.tsx
frontend/src/components/ui/: badge.tsx
frontend/src/store/: auth-store.ts
src/app/: page.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/register/: page.tsx
src/app/(dashboard)/: layout.tsx
src/app/(dashboard)/dashboard/: page.tsx
src/app/(dashboard)/forecast/: page.tsx
src/app/(dashboard)/products/: page.tsx
src/store/: auth-store.ts
src/types/: index.ts
supabase/migrations/: 20260104131705_create_core_tables.sql
